0.70 (06.01.2006) - John Siracusa <siracusa@mindspring.com>

    * Added primary_key_column_names() and has_primary_key() methods.
    * Added Storable hooks.
    * Driver classes no longer inherit from Rose::DB.
    * Improved Oracle DSN generation and quoting.  (Suggested by Todd Lorenz)

0.673 (05.12.2006) - John Siracusa <siracusa@mindspring.com>

    * Added partial support for Oracle databases.  (Code by Ron Savage)
    * Fixed a bug that could cause list_tables() to fail when using
      the "generic" fall-back database driver.

0.672 (04.14.2006) - John Siracusa <siracusa@mindspring.com>

    * Translate Postgres's "real" type to the standard "float" type.
      (Patch from Lucian Dragus)

0.671 (04.04.2006) - John Siracusa <siracusa@mindspring.com>

    * The war against stray "._*" files continues!

0.67 (04.04.2006) - John Siracusa <siracusa@mindspring.com>

    * Added support for the interval data type.  (Patch provided by
      Lucian Dragus.)
    * Prevent post_connect_sql from running more than once per DBI 
      database handle when using Apache::DBI.
    * Added work-around for interval formatting bug in DateTime::Format::Pg 
      version 0.10 and earlier.

0.66 (03.28.2006) - John Siracusa <siracusa@mindspring.com>

    * Date parsing now passes DateTime objects through immediately 
      instead of trying to parse them as strings and then failing 
      over to Rose::DateTime::Util's parse_date() function.
    * Updated the test suite to avoid buggy behavior in DBD::Pg 1.43+.
    * The database password attribute is now stored in a closure to 
      prevent it from appearing in Data::Dumper output.

0.65 (02.07.2006) - John Siracusa <siracusa@mindspring.com>

    * Actually release the changes that were supposed to be in 0.64.

0.64 (02.07.2006) - John Siracusa <siracusa@mindspring.com>

    * Small revisions to the tutorial.

0.63 (02.02.2006) - John Siracusa <siracusa@mindspring.com>

    * Support for Rose::DB::Object 0.66.
